cluster/hosted/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app wordpress
  namespace: hosted
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    # nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "amg.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
